adding the category partition tests